Fix alignment

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -631,7 +631,7 @@ a.pagination-item:hover {
   }
 
   .header-timeline {
-    left: 41vw !important;
+    left: 43vw !important;
   }
 
   .home-header {
